# MTHotel

./: .gitattributes  .gitignore  LICENSE  README.md  atsheader.md  plot_atss.gpl  plot_ts.gpl  ubuntu_example.md
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
compiler/: Readme_mingw64.md  x86_64-11.2.0-release-posix-seh-rt_v9-rev4.7z  x86_64-12.1.0-release-posix-seh-rt_v10-rev0.7z
cpp/: .clang-format  CMakeLists.txt  CMakeLists.txt.user.lnx  CMakeLists.txt.user.win  Doxyfile  build_only.sh  clang_build_debug_bfr.sh  clang_build_release_bfr.sh  example_envlinux_clang.sh  gcc_build_release_bfr.sh  gpltemp2.gp  qtcreator_settings.txt  snippets.h  win_build_release_prj_bfr.bat  win_cc_build_release_bfr.bat
cpp/adu_sim/: CMakeLists.txt  main.cpp
cpp/ats/: atss_to_ats.h
cpp/ats/ascii2ats/: CMakeLists.txt  main.cpp  single_colon_ascii.h
cpp/ats/atmtools/: CMakeLists.txt  main.cpp
cpp/ats/atsinfo/: CMakeLists.txt  main.cpp
cpp/ats/atstools/: CMakeLists.txt  adu06_fname.h  chats.h  main.cpp  pt_cat.h  pt_tojson.h
cpp/cal/chcal/: CMakeLists.txt  main.cpp
cpp/cal/mk_calibration/: CMakeLists.txt  mk_calibration.cpp  mk_calibration.h  synthetic.h
cpp/cal/mod_xml_cal/: CMakeLists.txt  main.cpp
cpp/cal/read_cal/: CMakeLists.txt  read_cal.cpp  read_cal.h
cpp/cmake/: fft.cmake  rpath.cmake
cpp/data/: CMakeLists.txt  MFS07e502.TXT  filter.sql3  info.sql3  master_calibration.sql3
cpp/file/atssfile/: CMakeLists.txt  atssfile.cpp  atssfile.h
cpp/include/: BS_thread_pool.h  CMakeLists.txt  Readme_base.md  Readme_json_h.md  Readme_matlotlib.md  about_system.h  all_colours.py  atmheader.h  atmm.h  atsheader.h  atsheader_def.h  atsheader_xml.h  atss.h  atss_time.h  base_constants.h  base_xml.h  bthread.h  cal_base.h  cal_entry.h  cal_get_sql.h  cal_synthetic.h  channel_collector.h  files_dirs.h  freqs.h  gnuplotter.h  iterator_templates.h  job.h  json.h  json_text.h  marg.h  messages.h  mini_math.h  mt_base.h  prz_vector.h  read_ascii.h  ring_buf_micro.h  spc_base.h  sqlite_handler.h  sqlite_msg_thread.h  sqlite_status_thread.h  (+7 more)
cpp/math_vector/: CMakeLists.txt  math_vector.cpp  math_vector.h
cpp/mt/ac_spectra/: CMakeLists.txt  ac_spectra.cpp  ac_spectra.h
cpp/mt/fir_filter/: CMakeLists.txt  fir_filter.cpp  fir_filter.h
cpp/mt/raw_spectra/: CMakeLists.txt  merge_abs_spectra.h  raw_spectra.cpp  raw_spectra.h
cpp/mt/tensor/: CMakeLists.txt  mt_tensor.cpp  mt_tensor.h
cpp/pt/pt2surv/: CMakeLists.txt  main.cpp
cpp/pt/ptspc/: CMakeLists.txt  main.cpp
cpp/sqlite_handler/: CMakeLists.txt  sqlite_handler.cpp  sqlite_handler.h
cpp/tests/all_runs/: CMakeLists.txt  main.cpp
cpp/tests/atmm_bin/: CMakeLists.txt  main.cpp
cpp/tests/ats_read_all/: CMakeLists.txt  main.cpp
cpp/tests/atss_example/: CMakeLists.txt  main.cpp
cpp/tests/dir_magic/: CMakeLists.txt  main.cpp
cpp/tests/dirtest/: CMakeLists.txt  main.cpp
cpp/tests/execpts/: CMakeLists.txt  main.cpp
cpp/tests/ffts/: CMakeLists.txt  main.cpp  main_o.cpp
cpp/tests/fftw_inv/: CMakeLists.txt  main.cpp
cpp/tests/fftw_length/: CMakeLists.txt  main.cpp
cpp/tests/fftw_length_basics/: CMakeLists.txt  main.cpp
cpp/tests/fftw_length_noise/: CMakeLists.txt  main.cpp
cpp/tests/fftw_length_noise_survey/: CMakeLists.txt  main.cpp
cpp/tests/fftw_length_noise_timeser/: CMakeLists.txt  main.cpp
cpp/tests/fftw_length_noise_timeser_wwo/: CMakeLists.txt  main.cpp
cpp/tests/filtertest/: CMakeLists.txt  main.cpp
cpp/tests/firsum/: CMakeLists.txt  main.cpp
cpp/tests/gplt/: CMakeLists.txt  main.cpp
cpp/tests/json_test/: CMakeLists.txt  main.cpp
cpp/tests/lambdas/: CMakeLists.txt  main.cpp
cpp/tests/pplot/: CMakeLists.txt  main.cpp
cpp/tests/prztest/: CMakeLists.txt  main.cpp  prz_vector.h
cpp/tests/read_cal_test/: CMakeLists.txt  main.cpp
cpp/tests/sqlite_threads/: CMakeLists.txt  main.cpp
cpp/tests/sqltest/: CMakeLists.txt  main.cpp  sqlite_handler.cpp  sqlite_handler.h
cpp/tests/srt/: CMakeLists.txt  main.cpp
cpp/tests/thread_pool/: CMakeLists.txt  main.cpp
cpp/tests/times/: CMakeLists.txt  main.cpp
cpp/tests/tinyxmlwriter_test/: CMakeLists.txt  main.cpp
cpp/tests/uni/: CMakeLists.txt  main.cpp
cpp/tests/xmlcal_test/: CMakeLists.txt  main.cpp
cpp/utils/atss_to_ascii/: CMakeLists.txt  main.cpp
cpp/utils/filter/: CMakeLists.txt  main.cpp
cpp/utils/mk_noise/: CMakeLists.txt  main.cpp
cpp/utils/rda/: CMakeLists.txt  main.cpp
cpp/utils/show_system_cal/: CMakeLists.txt  main.cpp
cpp/utils/spcplot/: CMakeLists.txt  main.cpp
cpp/utils/tsplot/: CMakeLists.txt  main.cpp
cpp/xml/tinyxml2/: CMakeLists.txt  tinyxml2.cpp  tinyxml2.h
cpp/xml/tinyxmlwriter/: CMakeLists.txt  tinyxmlwriter.h
doc/fft/: fft.rst
doc/mth5/source/: conf.py  index.rst
doc/mthotel/: Makefile  mymake.sh  templates.txt
doc/mthotel/source/: conf.py  index.md  index.rst
hdf5/ffts/: CMakeLists.txt
oss/: clang_build_release_bfr.sh
oss/fftreal_vector/: fftreal_vector.cpp  fftreal_vector.h
oss/sqlite/: win_build_release_prj_bfr.bat
oss/sqlite/SQLite3/: CMakeLists.txt
php/: create_survey_folders.php
php/include/: atss_file.php  atss_header.php  calibration.php
python/: pyplot_chan.py
python/bfr/: plot_ac.py
python/bfr/examples/: 084_ADU-07_C000_R001_TEx_2s.atss  084_ADU-07_C000_R001_TEx_2s.json  084_ADU-07_C002_R001_THx_2s.atss  084_ADU-07_C002_R001_THx_2s.json  084_ADU-07e_C000_TEx_2Hz.atss  084_ADU-07e_C000_TEx_2Hz.json  084_ADU-07e_C002_THx_2Hz.atss  084_ADU-07e_C002_THx_2Hz.json  084_V01_C00_R001_TEx_BL_2S.ats  084_V01_C02_R001_THx_BL_2S.ats  37024_20140808_ca_2048H_Hy.ats  803_ADU-08e_C002_R907_TEx_256H.json  803_ADU-08e_C002_R907_THx_256H.json  Readme.md  (+12 more)
python/include/: ats_base.py  atss_extended.py  atss_file.py  json_header.py  metronix_collection.py
python/mina/: plot_ac.py  plot_ac_all.py
python/not_working/: ceatest.ipynb  check_fft.ipynb  create_bin_ats.py
python/notebooks/: demo_create.ipynb  demo_read.ipynb  demo_surveys.h5  get_cwd.ipynb  hdf5_survey.ipynb  interpolate.ipynb
python/tests/: get_cwd.py  test_1_base.py  test_read_data.py
(+53 files in other folders)
