cmake_minimum_required(VERSION 3.20)
project(mt_base VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR}/include)


if(NOT DEFINED HEADERS)
    file(GLOB HEADERS_INSTALL ${CMAKE_CURRENT_SOURCE_DIR}⁄*.h)
endif()

install(FILES ${HEADERS_INSTALL} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)

if(NOT DEFINED FILES_INSTALL)
    file(GLOB FILES_INSTALL ${CMAKE_CURRENT_SOURCE_DIR}⁄*.md)
endif()

install(FILES ${FILES_INSTALL} DESTINATION ${CMAKE_INSTALL_PREFIX}/doc)
